Fixed some layout bugs, changed styles.

--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,7 +1,53 @@
 @CHARSET "UTF-8";
 
-.ui-widget, .ui-widget, .ui-widget {
-   # font-size: 14px !important;
-    font: 12pt sans-serif;
-  
+*{
+      color: #14305f  !important;
 }
+
+.ui-widget{
+	font: 12pt sans-serif;
+    /*color: #14305f;	*/
+}
+
+
+/*
+.ui-widget-content {
+	color: #14305f !important;
+}*/
+
+.ui-outputlabel{
+	font-weight: bold;
+	color: #14305f;
+}
+
+.ui-button{
+	/*width: 100px;*/
+	/*font-weight: bold;*/
+}
+
+.panel{
+	background-color: #F8F8F8;
+	border-radius: 5px;
+	border: solid 1px;
+	border-color: #CFD1D1;
+}
+
+
+/*
+.ui-datatable .ui-datatable-header{
+	font: 12pt sans-serif; !important;
+	font-weight: bold;
+	color: #14305f  !important;
+}
+
+.ui-datatable  .ui-datatable-data{
+	font-weight: bold;
+	  color: #14305f  !important;
+}
+*/
+.ui-datatable .ui-datatable-data{
+	height: 100%  !important;
+
+}
+
+
